--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,7 +5,7 @@
   --color-link: #ffffff;
   --color-link-hover: #d7d7d7;
 
-  --main-background: url(../assets/noise.png),
+  --main-background: url(../assets/images/background/noise.png),
     radial-gradient(ellipse at top, #1d383b, transparent),
     radial-gradient(ellipse at bottom, #3c2014, transparent);
   --main-background-size: 200px, 100%, 200%;
