--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -6,6 +6,12 @@
   justify-content: left;
   align-items: baseline;
 
+  aside {
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+  }
+
   .timeline-legend {
     position: fixed;
     top: 7em;
@@ -37,4 +43,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
 }
