--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,13 +4,18 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 100;
   padding: 0.6rem 0;
   box-sizing: border-box;
   background-color: transparent;
   transition: background-color, border-color,
     backdrop-filter 0.1s ease;
+
+  &.scrolled {
+    background-color: rgba(255, 255, 255, 0.09);
+    backdrop-filter: blur(20px) brightness(145%);
+  }
 
   &::before {
     content: '';
@@ -35,6 +40,13 @@
     .content {
       margin-left: 4rem;
       margin-right: 4rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .content {
+      margin-left: 1rem;
+      margin-right: 1rem;
     }
   }
 }
