--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -7,4 +7,41 @@
   a {
     padding: 0.5em;
   }
+
+  @media (max-width: 768px) {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    padding: 0.6rem 0;
+    a {
+      display: block;
+      width: 100%;
+      margin: 0;
+      padding: 0.2em 0;
+      text-align: center;
+      font-family: 'Baloo Da 2', system-ui;
+      font-size: 2em;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 0.2em;
+      background-color: rgb(18 12 12 / 50%);
+    }
+
+    &.open {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      align-content: center;
+      align-items: center;
+    }
+  }
 }
