--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import './styles/reset.css';
+
 @import './styles/variables.css';
 @import './styles/fonts.css';
 @import './styles/animations.css';
@@ -27,12 +29,11 @@ body {
 }
 
 body {
-  overflow-x: var(--main-overflow-x);
   color: var(--color-text);
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  min-height: 100vh;
   position: relative;
   display: flex;
   justify-content: center;
@@ -44,7 +45,6 @@ body {
   font-family: 'Livvic', sans-serif;
   font-size: 1rem;
   box-sizing: border-box;
-  margin: 0.6rem 4rem;
   max-width: 1600px;
   /* display: grid;
   grid-template-rows: fit-content(40%);
@@ -65,6 +65,12 @@ body {
   --noise-frequency: 0.008;
   --distortion-strength: 77;
   --outer-shadow-blur: 24px;
+}
+
+@media screen and (max-width: 768px) {
+  #root {
+    font-size: 0.85rem;
+  }
 }
 
 @media (prefers-color-scheme: light) {
@@ -110,6 +116,23 @@ hr:before {
 }
 
 .main-content {
+  min-height: calc(100vh - 12em);
+  margin: 0.6rem 4rem;
   margin-top: 5em;
-  min-height: calc(100vh - 10em);
+  transition: opacity 0.1s ease-in-out;
+}
+
+@media screen and (max-width: 1000px) {
+  .main-content {
+    margin-left: 4rem;
+    margin-right: 4rem;
+    margin-top: 7em;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-content {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
