--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -12,6 +12,8 @@
   padding: 14px;
   border-radius: 8px;
 
+  margin-bottom: 14px;
+
   &.theme-light {
     background-color: #ffffff;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
@@ -29,6 +31,11 @@
   margin-bottom: 14px;
   font-size: 1.2em;
   cursor: default;
+  background: white;
+  color: #343f49;
+  padding: 14px;
+  margin-bottom: -1em;
+  border-radius: 8px;
 }
 
 /* The div where WaveSurfer will draw the waveform */
