--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -14,10 +14,19 @@
   font-weight: 500;
 }
 
-h1 {
+h1,
+h2,
+h3 {
   font-size: 3.2em;
+  font-weight: 500;
   line-height: 1.1;
   font-family: 'Baloo Da 2', cursive;
+  margin: 0;
+}
+
+h2,
+h3 {
+  font-size: 2em;
 }
 
 a {
@@ -39,7 +48,7 @@ strong {
 p {
   font-size: 1.1em;
   font-weight: 400;
-  margin: 0.3em 0;
+  margin: 0.5em 0;
   max-width: 900px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
@@ -54,4 +63,27 @@ p {
 
 .opacity-30 {
   opacity: 0.3;
+}
+
+.flex-center-align {
+  display: flex;
+  align-items: center;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.highlight {
+  color: rgba(0, 0, 0, 0.9);
+  box-decoration-break: clone;
+  background: white;
+  border-radius: 1rem;
+  padding: 1px 0.5rem;
+  text-shadow: none;
+  font-weight: 500;
+}
+
+.color-white {
+  color: white;
 }
