--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,18 @@
 .footer {
-  margin-top: auto;
-  height: 4em;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
+  background: #00000055;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-top: 1px solid #ffffff0f;
+  z-index: 100;
+  backdrop-filter: blur(20px) brightness(145%);
+
+  .content {
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 0.8rem 4rem;
+  }
 }
