--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -23,6 +23,12 @@
     background-color: #343f49;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
   }
+
+  &.theme-footer {
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .audio-wave-title {
