--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   width: 100%;
+  padding-bottom: 5em;
   justify-content: left;
   gap: 40px;
   align-items: baseline;
