--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -16,7 +16,8 @@
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-size: 3.2em;
   font-weight: 500;
   line-height: 1.1;
@@ -27,6 +28,10 @@ h3 {
 h2,
 h3 {
   font-size: 2em;
+}
+
+h4 {
+  font-size: 1.2em;
 }
 
 a {
