--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -3,7 +3,6 @@
   flex-direction: row;
   flex-wrap: nowrap;
   width: 100%;
-  padding-bottom: 5em;
   justify-content: left;
   gap: 40px;
   align-items: baseline;
@@ -26,12 +25,12 @@
     position: fixed;
     top: 7em;
 
-    h4 {
+    a {
+      display: block;
       font-size: 0.9em;
       font-weight: 300;
       margin-top: 2em;
       opacity: 0.5;
-      cursor: pointer;
       transition: opacity 0.2s ease-in-out;
 
       &:first-child {
