change ripple loader color

--- a/src/components/Loaders/Ripple.css
+++ b/src/components/Loaders/Ripple.css
@@ -10,7 +10,7 @@
 .ripple-circle {
   width: 10rem;
   height: 10rem;
-  background-color: #34424b;
+  background-color: #ffffff;
   border-radius: 50%;
   position: absolute;
 }
