minor style chage

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ body.custom-cursor-active {
 
 #root {
   margin: 0;
-  width: 100%;
+  width: 100vw;
   font-family: 'Livvic', sans-serif;
   font-size: 1rem;
   box-sizing: border-box;
