disable light mode

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ body.custom-cursor-active {
   }
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -89,7 +89,7 @@ body.custom-cursor-active {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 .hidden {
   position: absolute;
