--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -38,13 +38,19 @@ h4,
 a {
   text-decoration: none;
   color: var(--color-link);
-  outline: none;
   transition: color 0.3s ease;
 }
 
 a:hover {
   color: var(--color-link-hover);
   outline: none;
+}
+
+a,
+button {
+  &:focus {
+    outline: 2px solid #df2d55;
+  }
 }
 
 strong {
