--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -68,6 +68,7 @@
   }
 
   button {
+    border-radius: 20px;
     transition: transform 0.2s ease-in-out;
     &:hover {
       transform: scale(1.2);
