--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,6 +34,10 @@
     margin: 0 auto;
     margin-top: 0.2em;
     max-width: 1600px;
+
+    a {
+      border-radius: 20px;
+    }
   }
 
   @media screen and (max-width: 1800px) {
