--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -7,7 +7,7 @@
   gap: 40px;
   align-items: baseline;
 
-  aside {
+  menu {
     @media screen and (max-width: 768px) {
       display: none;
     }
