--- a/src/components/Navigation/Menu/Hamburger.css
+++ b/src/components/Navigation/Menu/Hamburger.css
@@ -14,8 +14,8 @@
   fill: none;
   transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
   stroke: #ffffff;
-  stroke-width: 3.5;
-  stroke-linecap: round;
+  strokewidth: 3.5;
+  strokelinecap: round;
 }
 .ham1 .top {
   stroke-dasharray: 40 139;
