--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -8,6 +8,7 @@ button {
 .button {
   background: #fff;
   color: #154c57;
+  cursor: pointer;
   outline: none;
   border: 1px solid rgba(255, 255, 255, 0.2);
   box-sizing: border-box;
