--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -52,7 +52,7 @@
 }
 
 .metadata {
-  width: 30%;
+  width: auto;
   max-width: 320px;
 
   @media screen and (max-width: 640px) {
@@ -61,7 +61,8 @@
 }
 
 .player {
-  width: 70%;
+  width: 100%;
+  flex: 1;
 
   @media screen and (max-width: 640px) {
     width: auto;
