--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -1,7 +1,6 @@
 .audio-wave {
   z-index: 1;
   width: 100%;
-  max-width: 800px;
 }
 
 .audio-wave-container {
@@ -53,7 +52,7 @@
 
 .metadata {
   width: auto;
-  max-width: 320px;
+  min-width: 320px;
 
   @media screen and (max-width: 640px) {
     width: auto;
