--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import './styles/reset.css';
+@import './styles/fonts.css';
 
 @import './styles/variables.css';
 @import './styles/animations.css';
