--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -14,12 +14,12 @@
   margin-bottom: 14px;
 
   &.theme-light {
-    background-color: #ffffff;
+    background-color: var(--color-white);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
   }
 
   &.theme-dark {
-    background-color: #343f49;
+    background-color: var(--color-dark-blue);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
   }
 
@@ -36,8 +36,8 @@
   margin-bottom: 14px;
   font-size: 1.2em;
   cursor: default;
-  background: white;
-  color: #343f49;
+  background: var(--color-white);
+  color: var(--color-dark-blue);
   padding: 14px;
   margin-bottom: -1em;
   border-radius: 8px;
