--- a/src/components/Button/PlayPause/PlayPauseButton.css
+++ b/src/components/Button/PlayPause/PlayPauseButton.css
@@ -11,11 +11,11 @@
   flex-shrink: 0;
 
   &.theme-light {
-    background: #34424b;
+    background: var(--color-dark-blue);
   }
 
   &.theme-dark {
-    background: #fff;
+    background: var(--color-white);
   }
 }
 .play-button:hover {
