--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -7,7 +7,7 @@
   gap: 40px;
   align-items: baseline;
 
-  menu {
+  nav {
     @media screen and (max-width: 768px) {
       display: none;
     }
@@ -25,19 +25,24 @@
     list-style-type: none;
     position: fixed;
     top: 7em;
+    padding: 0;
+    margin: 0;
+
+    li {
+      margin-top: 2em;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
 
     a {
       cursor: pointer;
       display: block;
       font-size: 0.9em;
       font-weight: 300;
-      margin-top: 2em;
       opacity: 0.5;
       transition: opacity 0.2s ease-in-out;
-
-      &:first-child {
-        margin-top: 0;
-      }
 
       &.active {
         opacity: 1;
