--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -28,6 +28,19 @@
     padding: 0;
     margin: 0;
 
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: hsl(0deg 0% 66.67% / 6%);
+      border-radius: 20%;
+      filter: blur(40px);
+      z-index: -1;
+    }
+
     li {
       margin-top: 2em;
 
