--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+/* Base styles imported here so Vite bundles them (single request, minified in prod) */
+@import './styles/reset.css';
+@import './styles/fonts.css';
+@import './styles/variables.css';
+@import './styles/animations.css';
+@import './styles/typography.css';
+@import './styles/layout.css';
+@import './styles/media.css';
+
 :root {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
