--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -48,7 +48,8 @@
 
 .metadata {
   width: auto;
-  min-width: 320px;
+  min-width: 230px;
+  max-width: 20%;
 
   @media screen and (max-width: 640px) {
     width: auto;
@@ -69,8 +70,9 @@
     cursor: pointer;
     border: none;
     transition: transform 0.1s ease-in-out;
-    &:hover {
-      transform: scale(1.15);
-    }
+  }
+
+  button:hover {
+    transform: scale(1.15);
   }
 }
