--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -35,6 +35,10 @@ button {
   }
 }
 
+.button:hover {
+  opacity: 0.85;
+}
+
 @media screen and (max-width: 768px) {
   .button {
     font-size: 1.1rem;
