--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  right: 0;
   z-index: 300;
   padding: 0.6rem 0;
   box-sizing: border-box;
@@ -42,7 +42,7 @@
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     .content {
       margin-left: 1rem;
       margin-right: 1rem;
