--- a/src/components/Particles/Particles.css
+++ b/src/components/Particles/Particles.css
@@ -2,9 +2,9 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 100vw;
+  right: 0;
+  bottom: 0;
   z-index: -1;
-  height: 100vh;
   pointer-events: none;
 
   background: var(--main-background);
