--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -2,6 +2,12 @@
   margin: 0 0 2em 0;
   width: 100%;
   height: auto;
-  max-width: 400px;
   max-height: 430px;
+  max-width: 400px;
+  
+  @media screen and (max-width: 768px) {
+    max-width: 104%;
+    width: 104%;
+    margin-left: -2%;
+  }
 }
