--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -90,6 +90,18 @@
   margin-top: 3em;
 }
 
+.mb-1 {
+  margin-bottom: 1em;
+}
+
+.mb-2 {
+  margin-bottom: 2em;
+}
+
+.mb-3 {
+  margin-bottom: 3em;
+}
+
 .m-1 {
   margin: 1em;
 }
