--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -44,7 +44,7 @@
 .image-grid {
   height: 490px;
   min-height: 300px;
-  width: 100vw;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: row;
