--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -21,7 +21,7 @@ h4 {
   font-size: 3.2em;
   font-weight: 500;
   line-height: 1.1;
-  font-family: 'Baloo Da 2', cursive;
+  font-family: 'Baloo Da 2', system-ui;
   margin: 0;
 }
 
