--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,49 +8,24 @@
   z-index: 1000;
   backdrop-filter: blur(10px) brightness(125%);
 
-  .content {
+  .footer-content {
+    display: flex;
     align-items: center;
     justify-content: start;
-    padding: 0.8rem 4rem;
-  }
+    margin: 0 auto;
+    max-width: var(--content-max-width);
+    padding: 0.8rem var(--space-lg);
 
-  @media screen and (max-width: 1000px) {
-    .content {
-      padding-left: 1rem;
-      padding-right: 1rem;
+    @media (max-width: 1000px) {
+      padding-left: var(--space-sm);
+      padding-right: var(--space-sm);
+      min-height: 70px;
     }
 
-    .metadata {
-      min-width: 240px;
-      justify-content: center;
-
-      h3 {
-        font-size: 1.2rem;
-      }
-    }
-  }
-
-  @media screen and (max-width: 640px) {
-    .content {
-      padding-left: 1rem;
-      padding-right: 1rem;
+    @media (max-width: 640px) {
+      padding-left: var(--space-sm);
+      padding-right: var(--space-sm);
       flex-direction: column-reverse;
-    }
-
-    .metadata {
-      min-width: 200px;
-
-      h3 {
-        font-size: 1.2rem;
-      }
-    }
-
-    .waveform {
-      display: none;
-    }
-
-    .player {
-      margin-bottom: 1rem;
     }
   }
 }
