--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -8,7 +8,7 @@
   align-items: baseline;
 
   nav {
-    @media screen and (max-width: 768px) {
+    @media (max-width: 768px) {
       display: none;
     }
   }
@@ -49,13 +49,16 @@
       }
     }
 
-    a {
+    .timeline-nav-btn {
+      all: unset;
       cursor: pointer;
       display: block;
       font-size: 0.9em;
       font-weight: 300;
       opacity: 0.5;
       transition: opacity 0.2s ease-in-out;
+      color: inherit;
+      text-align: left;
 
       &.active {
         opacity: 1;
@@ -63,6 +66,10 @@
 
       &:hover {
         opacity: 0.8;
+      }
+
+      &:focus-visible {
+        outline: 2px solid var(--color-hot-pink);
       }
 
       span {
@@ -77,7 +84,7 @@
   display: flex;
   flex-direction: column;
 
-  @media screen and (max-width: 768px) {
+  @media (max-width: 768px) {
     width: 100%;
   }
 }
