--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -2,64 +2,16 @@
   display: flex;
 }
 
-.flex-center {
-  display: flex;
-  align-content: space-around;
-  justify-content: space-around;
-  align-items: center;
-}
-
 .items-center {
   align-items: center;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-}
-
-.column-5 {
-  width: 5%;
-}
-
-.column-10 {
-  width: 10%;
 }
 
 .column-20 {
   width: 20%;
 }
 
-.column-30 {
-  width: 30%;
-}
-
-.column-40 {
-  width: 40%;
-}
-
-.column-50 {
-  width: 50%;
-}
-
-.column-60 {
-  width: 60%;
-}
-
 .column-70 {
   width: 70%;
-}
-
-.column-80 {
-  width: 80%;
-}
-
-.column-90 {
-  width: 90%;
-}
-
-.column-100 {
-  width: 100%;
 }
 
 .gap-0-5 {
@@ -70,58 +22,18 @@
   gap: 1em;
 }
 
-.gap-1-5 {
-  gap: 1.5em;
-}
-
-.gap-2 {
-  gap: 2em;
+.ml-1 {
+  margin-left: 1em;
 }
 
 .mt-1 {
   margin-top: 1em;
 }
 
-.mt-2 {
-  margin-top: 2em;
-}
-
-.mt-3 {
-  margin-top: 3em;
-}
-
-.mb-1 {
-  margin-bottom: 1em;
+.mr-1 {
+  margin-right: 1em;
 }
 
 .mb-2 {
   margin-bottom: 2em;
-}
-
-.mb-3 {
-  margin-bottom: 3em;
-}
-
-.m-1 {
-  margin: 1em;
-}
-
-.m-2 {
-  margin: 2em;
-}
-
-.m-3 {
-  margin: 3em;
-}
-
-.p-1 {
-  padding: 1em;
-}
-
-.p-2 {
-  padding: 2em;
-}
-
-.p-3 {
-  padding: 3em;
 }
