--- a/src/components/AudioWave/AudioWave.css
+++ b/src/components/AudioWave/AudioWave.css
@@ -114,7 +114,10 @@
     background: none;
     cursor: pointer;
     border: none;
-    transition: transform 0.1s ease-in-out;
+    
+    svg {
+      transition: transform 0.1s ease-in-out;
+    }
   }
 
   button:hover svg {
