--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -22,6 +22,12 @@
   gap: 1em;
 }
 
+.mobile-ml-1 {
+  @media (max-width: 768px) {
+    margin-left: 1em;
+  }
+}
+
 .ml-1 {
   margin-left: 1em;
 }
