--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -18,10 +18,6 @@
   gap: 0.5em;
   transition: opacity 0.3s ease;
 
-  &:hover {
-    opacity: 0.85;
-  }
-
   &.secondary {
     background: rgba(80, 108, 131, 0.4);
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -31,6 +27,10 @@
   @media (max-width: 768px) {
     font-size: 1.1rem;
   }
+}
+
+.button:hover {
+  opacity: 0.85;
 }
 
 .info-button {
