--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -14,6 +14,13 @@
 
 .contact-link {
   margin-left: 1em;
+  mark {
+    transition: transform 0.2s ease-in-out;
+  }
+}
+
+.contact-link:hover mark {
+  transform: translateX(0.3em);
 }
 
 .contact-link:nth-child(n) {
