--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,9 @@
   padding: 0.6rem 0;
   box-sizing: border-box;
   background-color: transparent;
-  transition: background-color 0.1s ease, border-color 0.1s ease,
+  transition:
+    background-color 0.1s ease,
+    border-color 0.1s ease,
     backdrop-filter 0.1s ease;
 
   &.scrolled {
