--- a/src/components/Navigation/Menu/Hamburger.css
+++ b/src/components/Navigation/Menu/Hamburger.css
@@ -19,7 +19,8 @@
   fill: none;
   stroke: white;
   stroke-width: 5;
-  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition:
+    stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
