--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -56,12 +56,13 @@
       font-size: 0.9em;
       font-weight: 300;
       opacity: 0.5;
-      transition: opacity 0.2s ease-in-out;
+      transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
       color: inherit;
       text-align: left;
 
       &.active {
         opacity: 1;
+        transform: translateX(0.8em);
       }
 
       &:hover {
